kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xchemspa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xchemspa
  template:
    metadata:
      labels:
    app: xchemspa
    spec:
      containers:
        -
          image: "gcr.io/diamond-privreg/soakdb:2.2"
          name: xchemspa
          ports:
            -
              containerPort: 8000
              name: http
          securityContext:
            privileged: false
#          volumeMounts:
#            -
#              mountPath: /dls
#              mountPropagation: HostToContainer
#              name: dls
#      securityContext:
#        runAsGroup: 1217611
#        runAsUser: 1217611
#      volumes:
#        -
#          hostPath:
#            path: /dls
#            type: Directory
#          name: dls
---
apiVersion: v1
kind: Service
metadata:
  name: xchemspa-service
spec:
  ports:
    -
      name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: xchemspa
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/websocket-services: xchemspa-service
  name: xchemspa-ingress
spec:
  rules:
    -
      host: xchemspa.diamond.ac.uk
      http:
    paths:
          -
            backend:
              service:
                name: xchemspa-service
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    -
      hosts:
    - xchemspa.diamond.ac.uk
